feat: 全模块自动审查改进 + 高危安全修复
对全部 85 个模块做 9 维度审查，落地一批低风险代码修复并补充单元测试，
其余改进建议记入各模块 README 的「改进建议（自动分析 2026-06-11）」章节。

安全修复（高危）：
- ms-user: 凭据字段出口脱敏（密码哈希/TOTP 秘钥不再经 RPC 与管理端返回）；登录失败阈值锁定
- ms-auth: 删除角色级联回收授权关系 + 缓存失效；临时授权补 SoD/角色存在校验、禁止静默替换永久授权；isUserHasResource 查错关系修复
- distributed: provider 端补 HMAC 上下文签名校验（时间戳窗口 + nonce 防重放 + 常数时间比较）
- ms-sys: checkIpAccess 区分黑白名单语义；数据源密码出口脱敏与编辑回填；缓存导出敏感名单控制
- security: JWT 增加 issuer/audience 校验（防多服务共用 keystore 横向重放）
- file-minio: 删除内置默认凭证、凭证缺失快速失败、fileName 路径穿越校验
- base: 修复 XmlKit XXE、HttpClientKit 下载路径穿越

正确性修复（节选）：
- log-audit: Web 审计请求体缓存上限传 0 导致 body 恒空；非 Web 路径脱敏未生效
- cache: evictByPattern 模式失效、多参数批量 key 笛卡尔积
- data-ktorm: 审计字段对间接实现 IAuditable 的实体未自动填充
- context: OrderProperties keys 失步、锁租期 Int 溢出、初始化双扣减
- ms-msg: 多用户共用邮箱发送结果丢用户
- 其余：RedissonLocker 中断标志、RocketMQ isRunning 可见性、JpgCompressor 默认配置崩溃等

测试：禁用 SysApiAdminApplicationTest（Thread.sleep(Long.MAX_VALUE) 手动冒烟器，会挂起自动化测试）；
修复 minio 文件名后缀拼接与 user-core 时间戳精度的测试回归；新增多个纯逻辑单测。

全仓库 main + test 编译通过。

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>